fixe: Review getAll
