# src/dto/review.dto.ts
@@ -3,6 +3,6 @@ import { GameDTO } from "./game.dto";
 export interface ReviewDTO {
   id?: number;
   rating: number;
-  comment: string;
-  gameId: number;
+  review_text: string;
+  game_id: number;
 }
